--- a/moteurTheorique/moteurTheorique.vcxproj.filters
+++ b/moteurTheorique/moteurTheorique.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="moteurTheorique.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="Transform.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Transform.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
